<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.konrad.start_app.loginandregister.Login"
    android:background="@color/start_app">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">



        <ImageView
            android:id="@+id/imageview1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"
            android:src="@drawable/primary_logo_on_transparent_282x69"
            android:contentDescription="@string/welcome" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="6dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/texview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginsystem"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/texview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/emailvalid"
                android:layout_width="250dp"
                android:layout_height="wrap_content"

                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/texview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PasswdLOG"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/passwordvalid"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"

                />
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BTNLOG"
            android:onClick="procesLog"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="513dp">

            <Button
                android:id="@+id/toRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToRegister"
                android:text="Brak konta? Zarejestruj sie" />
        </LinearLayout>

    </LinearLayout>






    </LinearLayout>

</android.support.constraint.ConstraintLayout>
